# Redopera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  particle.cpp  plane.cpp  text.cpp  texts.cpp  triangle.cpp
include/redopera/: RArea.h  RAudio.h  RAudioStream.h  RColor.h  RContext.h  RController.h  RConvt.h  RDebug.h  RDefine.h  RDict.h  REntity.h  REvent.h  RFormat.h  RFunction.h  RGame.h  RInfoWindow.h  RInput.h  RInputModule.h  RJson.h  RKeeper.h  RMath.h  RModelMat.h  RName.h  RNode.h  ROpenGL.h  RPlane.h  RPoint.h  RRect.h  RRenderSys.h  RRenderSystem.h  RResource.h  RRole.h  RShaders.h  RSigslot.h  RSize.h  RSprite.h  RText.h  RTextLoader.h  RTextbox.h  RTextsLoader.h  (+6 more)
include/redopera/dependent/: SourceCodePro.h  minimp3.h
include/redopera/dependent/glad/: glad.h
include/redopera/render/: RContext.h  ROpenGL.h  RProgram.h  RRenderer.h  RShader.h  RSprite.h  RTexture.h  render.h
include/redopera/rsc/: RCursor.h  RFile.h  RFont.h  RImage.h  RJson.h  RLuaScript.h  RMp3.h  RMusic.h  RPack.h  RResource.h  RScript.h  RShader.h  RShaderProg.h  RSoundEffect.h  RTexture.h
include/redopera/thread/: RThread.h  RThreadPool.h  RThreadStack.h
src/: CMakeLists.txt  RArea.cpp  RAudioStream.cpp  RContext.cpp  RController.cpp  RCursor.cpp  RDebug.cpp  RDefine.cpp  REntity.cpp  REvent.cpp  RFont.cpp  RGame.cpp  RImage.cpp  RInfoWindow.cpp  RInput.cpp  RInputModule.cpp  RLuaScript.cpp  RMath.cpp  RModelMat.cpp  RMp3.cpp  RMusic.cpp  RNode.cpp  RPack.cpp  RPlane.cpp  RProgram.cpp  RRenderSys.cpp  RRenderSystem.cpp  RRenderer.cpp  RResource.cpp  RRole.cpp  RScript.cpp  RShader.cpp  RShaderProg.cpp  RShaders.cpp  RSoundEffect.cpp  RSprite.cpp  RTextLoader.cpp  RTextbox.cpp  RTextsLoader.cpp  RTexture.cpp  (+5 more)
src/dependent/: SourceCodePro.cpp  glad.cpp  implementation.cpp
test/: CMakeLists.txt  context.cpp  debugInput.cpp  event.cpp  font.cpp  format.cpp  glContext.cpp  input.cpp  layout.cpp  name.cpp  opengl.cpp  share.cpp  sound.cpp  threads.cpp  unitTest.cpp  window.cpp
test/TestFile/: min.lua
